--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -9,3 +9,57 @@
     -fx-font-size: 2.3em;
     -fx-text-fill: white;
 }
+
+.root {
+    -fx-background-image: url('../assets/MainSceneBackground.png');
+    -fx-background-size: cover, auto;
+}
+
+#GradientPane {
+    -fx-background-color: linear-gradient(to left, #000000BB, #00000055 40%, #00000000 60%);
+}
+
+#DarkenPane {
+    -fx-background-color: rgba(0, 0, 0, 0.5);
+}
+
+.h1 {
+    -fx-font-family: "Montserrat Black";
+    -fx-font-size: 3.5em;
+    -fx-text-fill: white;
+}
+
+.h3 {
+    -fx-font-family: "Montserrat";
+    -fx-font-size: 2em;
+    -fx-text-fill: white;
+}
+
+.text-field {
+    /*-fx-background-color: #FFFFFF33;
+    -fx-background-insets: 0 0 0 0;*/
+    -fx-background-color: transparent;
+    -fx-text-fill: white;
+    -fx-font-family: "Montserrat Black";
+    -fx-font-size: 2em;
+}
+
+.text-area *.text {
+    -fx-text-alignment: center;
+}
+
+.bigbutton {
+    -fx-background-color: #FFFFFF44;
+    -fx-font-family: "Montserrat Light";
+    -fx-font-size: 2em;
+    -fx-text-fill: white;
+}
+
+.bigbutton:hover {
+    -fx-background-color: #4D7A97;
+}
+
+.bigbutton:pressed {
+    -fx-background-color: #FFFFFF;
+    -fx-text-fill: black;
+}
