feat: add nickname screen + refactor change screen

--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -36,9 +36,17 @@
     -fx-text-fill: white;
 }
 
+.error-message {
+    -fx-font-family: "Montserrat SemiBold";
+    -fx-font-size: 1.5em;
+    -fx-text-fill: white;
+}
+
 .text-field {
     /*-fx-background-color: #FFFFFF33;
     -fx-background-insets: 0 0 0 0;*/
+    -fx-border-color: white;
+    -fx-border-width: 0 0 1 0;
     -fx-background-color: transparent;
     -fx-text-fill: white;
     -fx-font-family: "Montserrat Black";
