--- a/src/main/resources/fxml/ConnectToServer.fxml
+++ b/src/main/resources/fxml/ConnectToServer.fxml
@@ -29,18 +29,18 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label prefHeight="83.0" prefWidth="880.0" styleClass="h1" text="Ready to Challenge other Players?" />
-                  <Label styleClass="h3" text="Type in the Server's IP Address and Port to find a match!">
+                  <Label alignment="CENTER" prefHeight="83.0" prefWidth="880.0" styleClass="h1" text="%connect_to_server_prompt_1" />
+                  <Label styleClass="h3" text="%connect_to_server_prompt_2">
                      <VBox.margin>
                         <Insets bottom="60.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField fx:id="addressField" alignment="CENTER" maxWidth="400.0" prefHeight="28.0" prefWidth="200.0" promptText="IP Address" styleClass="text-field">
+                  <TextField fx:id="hostField" alignment="CENTER" maxWidth="400.0" prefHeight="28.0" prefWidth="200.0" promptText="127.0.0.1" styleClass="text-field">
                      <VBox.margin>
                         <Insets bottom="50.0" />
                      </VBox.margin>
                   </TextField>
-                  <TextField fx:id="portField" alignment="CENTER" maxWidth="200.0" prefHeight="28.0" prefWidth="890.0" promptText="Port" styleClass="text-field">
+                  <TextField fx:id="portField" alignment="CENTER" maxWidth="200.0" prefHeight="28.0" prefWidth="890.0" promptText="7268" styleClass="text-field">
                      <VBox.margin>
                         <Insets bottom="50.0" />
                      </VBox.margin>
@@ -50,12 +50,12 @@
                         <Insets bottom="50.0" />
                      </VBox.margin>
                   </Label>
-                  <Button fx:id="connectButton" minHeight="100.0" mnemonicParsing="false" onAction="#handleConnectButton" prefHeight="60.0" prefWidth="200.0" styleClass="bigbutton" text="Connect" />
+                  <Button fx:id="connectButton" minHeight="100.0" mnemonicParsing="false" onAction="#handleConnectButton" prefHeight="60.0" prefWidth="200.0" styleClass="bigbutton" text="%connect" />
                </children>
             </VBox>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="connectButton1" minHeight="100.0" mnemonicParsing="false" onAction="#handleMenuButton" prefHeight="50.0" prefWidth="150.0" styleClass="bigbutton" text="Menu" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+                  <Button fx:id="connectButton1" minHeight="100.0" mnemonicParsing="false" onAction="#handleMenuButton" prefHeight="50.0" prefWidth="150.0" styleClass="bigbutton" text="%menu" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
                </children>
             </AnchorPane>
          </children>
