--- a/src/main/resources/fxml/Credits.fxml
+++ b/src/main/resources/fxml/Credits.fxml
@@ -1,26 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.GaussianBlur?>
-<?import javafx.scene.layout.*?>
-<StackPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+
+<StackPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.ui.gui.guicontrollers.CreditsController">
    <children>
-      <AnchorPane id="blur-pane" prefHeight="200.0" prefWidth="200.0">
-         <effect>
-            <GaussianBlur radius="11.54" />
-         </effect>
-      </AnchorPane>
+      <AnchorPane id="blur-pane" prefHeight="200.0" prefWidth="200.0" />
       <AnchorPane id="darken-pane" prefHeight="200.0" prefWidth="200.0" />
-      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="675.0" prefWidth="878.0">
-         <center>
-            <Label id="credit-text" alignment="CENTER" prefHeight="554.0" prefWidth="836.0" text="Adaptation of the &quot;Santorini&quot; game by Cranio Creations Srl.&#10;&#10;Written for the final software engineering project by:&#10;&#10;Andrea Riva&#10;&#10;Alessandro Sanvito&#10;&#10;Kien Tuong Truong&#10;&#10;&#10;Under the supervision of prof. Cugola&#10;" textAlignment="CENTER" wrapText="true" BorderPane.alignment="CENTER">
+      <GridPane alignment="CENTER">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="400.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="100.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="100.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label id="credit-text" alignment="CENTER" prefHeight="520.0" prefWidth="893.0" text="%credits_text" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
             </Label>
-         </center>
-      </BorderPane>
+            <AnchorPane cache="true" prefHeight="100.0" prefWidth="154.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BASELINE">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="48.0" layoutY="26.0" mnemonicParsing="false" onAction="#handleMenuButton" prefHeight="50.0" prefWidth="150.0" styleClass="bigbutton" text="%menu" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+               </children>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </AnchorPane>
+         </children>
+      </GridPane>
    </children>
 </StackPane>
