--- a/src/main/resources/fxml/SetNickname.fxml
+++ b/src/main/resources/fxml/SetNickname.fxml
@@ -29,8 +29,8 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="83.0" prefWidth="880.0" styleClass="h1" text="Server found!" textAlignment="CENTER" />
-                  <Label styleClass="h3" text="Type your nickname to start playing!">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="83.0" prefWidth="880.0" styleClass="h1" text="%server_found" textAlignment="CENTER" />
+                  <Label styleClass="h3" text="%nickname_prompt">
                      <VBox.margin>
                         <Insets bottom="60.0" />
                      </VBox.margin>
@@ -45,12 +45,12 @@
                         <Insets bottom="50.0" />
                      </VBox.margin>
                   </Label>
-                  <Button fx:id="setNicknameButton" minHeight="100.0" mnemonicParsing="false" onAction="#handleNicknameButton" prefHeight="60.0" prefWidth="400.0" styleClass="bigbutton" text="Set Nickname" />
+                  <Button fx:id="setNicknameButton" minHeight="100.0" mnemonicParsing="false" onAction="#handleNicknameButton" prefHeight="60.0" prefWidth="400.0" styleClass="bigbutton" text="%set_nickname" />
                </children>
             </VBox>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="menuButton" minHeight="100.0" mnemonicParsing="false" onAction="#handleMenuButton" prefHeight="50.0" prefWidth="150.0" styleClass="bigbutton" text="Menu" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+                  <Button fx:id="menuButton" minHeight="100.0" mnemonicParsing="false" onAction="#handleMenuButton" prefHeight="50.0" prefWidth="150.0" styleClass="bigbutton" text="%menu" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
                </children>
             </AnchorPane>
          </children>
