--- a/src/main/resources/fxml/JoinLobby.fxml
+++ b/src/main/resources/fxml/JoinLobby.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -35,9 +37,15 @@
                         <Insets bottom="60.0" />
                      </VBox.margin>
                   </Label>
-                  <AnchorPane prefHeight="316.0" prefWidth="930.0">
+                  <AnchorPane prefHeight="316.0" prefWidth="930.0" VBox.vgrow="NEVER">
                      <children>
-                        <ImageView fitHeight="308.0" fitWidth="200.0" layoutX="348.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="loadingTower" fitHeight="500.0" fitWidth="140.0" layoutX="395.0" pickOnBounds="true" preserveRatio="true" smooth="false" AnchorPane.bottomAnchor="2.0">
+                           <image>
+                              <Image url="@../assets/loading_tower0_400px.png" />
+                           </image>
+                           <viewport>
+                              <Rectangle2D minX="140.0" width="140.0" />
+                           </viewport></ImageView>
                      </children>
                   </AnchorPane>
                </children>
