feat: add gods selection screen + change naming convention for css file

--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -72,3 +72,20 @@
     -fx-background-color: #FFFFFF;
     -fx-text-fill: black;
 }
+
+.scroll-pane > .viewport {
+    -fx-background-color: transparent;
+}
+.scroll-pane {
+    -fx-background-color: #FFFFFF44;
+}
+
+.scroll-bar:vertical {
+    -fx-background-color: transparent;
+}
+
+.scroll-bar:vertical .thumb{
+    -fx-background-color: white;
+}
+
+
