--- a/src/main/resources/fxml/MainMenu.fxml
+++ b/src/main/resources/fxml/MainMenu.fxml
@@ -14,7 +14,7 @@
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.ui.gui.guicontrollers.WelcomeScreenController">
    <children>
       <AnchorPane id="GradientPane" prefHeight="200.0" prefWidth="200.0" />
-      <BorderPane id="MainMenuBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="maintitle" stylesheets="@../css/MainMenu.css" StackPane.alignment="CENTER_RIGHT">
+      <BorderPane id="MainMenuBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="maintitle" stylesheets="@../css/main-menu.css" StackPane.alignment="CENTER_RIGHT">
          <right>
             <GridPane alignment="CENTER_RIGHT" prefHeight="720.0" prefWidth="980.0" BorderPane.alignment="CENTER">
               <columnConstraints>
@@ -28,7 +28,7 @@
                   <RowConstraints maxHeight="234.0" minHeight="10.0" prefHeight="145.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleJoinLobby" prefHeight="99.0" prefWidth="500.0" styleClass="titlebutton" stylesheets="@../css/MainMenu.css" text="%join_lobby" textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleJoinLobby" prefHeight="99.0" prefWidth="500.0" styleClass="titlebutton" stylesheets="@../css/main-menu.css" text="%join_lobby" textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets right="60.0" />
                      </GridPane.margin></Button>
