feat: progress on Ask Gods from List scene

--- a/src/main/resources/css/board.css
+++ b/src/main/resources/css/board.css
@@ -2,6 +2,7 @@
     -fx-background-color: 00000000;
 }
 
+/*
 .cellpane {
     -fx-background-image: url('../assets/grass.png');
     -fx-background-size: 100% auto;
@@ -11,4 +12,4 @@
     -fx-background-image: url('../assets/dome.png');
     -fx-background-size: 100% auto;
 }
-
+*/
