--- a/src/main/resources/fxml/AskGodsFromList.fxml
+++ b/src/main/resources/fxml/AskGodsFromList.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,6 +10,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -17,18 +19,19 @@
    <children>
       <AnchorPane id="GradientPane" prefHeight="200.0" prefWidth="200.0" />
       <AnchorPane id="DarkenPane" prefHeight="400.0" prefWidth="600.0" />
-      <GridPane>
+      <GridPane alignment="CENTER" StackPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="561.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="100.0" minHeight="0.0" prefHeight="100.0" vgrow="NEVER" />
+          <RowConstraints maxHeight="200.0" minHeight="0.0" prefHeight="200.0" vgrow="NEVER" />
           <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="420.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="100.0" minHeight="0.0" prefHeight="100.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
+            <Label fx:id="chooseGodsPrompt" alignment="CENTER" contentDisplay="CENTER" prefHeight="57.0" prefWidth="776.0" styleClass="h1" text="Choose Gods Prompt" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" />
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
                   <ScrollPane id="god-icon-flowpane" fitToWidth="true" hbarPolicy="NEVER" prefHeight="442.0" prefWidth="880.0" VBox.vgrow="SOMETIMES">
@@ -40,25 +43,43 @@
             </VBox>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="menuButton" maxHeight="50.0" maxWidth="150.0" minHeight="100.0" mnemonicParsing="false" onAction="#handleMenuButton" prefHeight="50.0" prefWidth="150.0" styleClass="bigbutton" text="Menu" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+                  <Button fx:id="menuButton" maxHeight="50.0" maxWidth="150.0" minHeight="100.0" mnemonicParsing="false" onAction="#handleMenuButton" prefHeight="50.0" prefWidth="150.0" styleClass="bigbutton" text="%menu" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
                </children>
             </AnchorPane>
          </children>
       </GridPane>
       <AnchorPane id="gradient-pane" fx:id="gradientPane" onMouseClicked="#reverse" prefHeight="200.0" prefWidth="200.0" translateX="-1280.0" />
-      <AnchorPane fx:id="cardPane" maxWidth="350.0" pickOnBounds="false" prefWidth="350.0">
+      <AnchorPane fx:id="cardPane" onMouseClicked="#reverse" pickOnBounds="false">
          <children>
-            <VBox id="vboxview" fx:id="currentCardAndButton" alignment="CENTER" layoutY="1.0" pickOnBounds="false" prefHeight="720.0" prefWidth="370.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <VBox id="vboxview" fx:id="godDescriptionLabel" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="937.0" pickOnBounds="false" prefHeight="720.0" prefWidth="937.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <ImageView fx:id="selectedCard" fitHeight="347.0" fitWidth="321.0" pickOnBounds="true" preserveRatio="true">
+                  <HBox spacing="40.0">
                      <VBox.margin>
                         <Insets bottom="30.0" />
                      </VBox.margin>
-                     <image>
-                        <Image url="@../assets/god_cards/apollo_card.png" />
-                     </image>
-                  </ImageView>
-                  <Button mnemonicParsing="false" prefHeight="56.0" prefWidth="302.0" styleClass="bigbutton" text="Select God Card" />
+                     <children>
+                        <ImageView fx:id="selectedCard" fitHeight="347.0" fitWidth="321.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../assets/god_cards/apollo_card.png" />
+                           </image>
+                        </ImageView>
+                        <VBox alignment="CENTER_LEFT">
+                           <children>
+                              <Label fx:id="godName" prefHeight="57.0" prefWidth="287.0" styleClass="h1" text="God Name" />
+                              <Label fx:id="godSubtitle" styleClass="h3" text="God Subtitle" />
+                              <Label fx:id="godDescription" prefHeight="136.0" prefWidth="494.0" styleClass="normal-text" text="Nihil est hic id unde totam sint cupiditate. Cum consequatur eum hic. Sed numquam officiis velit necessitatibus sunt voluptatibus aliquid eos. Qui ratione corporis iste temporibus earum." wrapText="true" />
+                           </children>
+                        </VBox>
+                     </children>
+                     <padding>
+                        <Insets left="70.0" />
+                     </padding>
+                  </HBox>
+                  <Button mnemonicParsing="false" prefHeight="56.0" prefWidth="302.0" styleClass="bigbutton" text="Select God Card">
+                     <VBox.margin>
+                        <Insets left="35.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
             </VBox>
          </children>
