--- a/src/main/resources/fxml/InGame.fxml
+++ b/src/main/resources/fxml/InGame.fxml
@@ -38,7 +38,7 @@
                <children>
                   <AnchorPane fx:id="boardContainer" layoutY="0.5" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="580.0" prefWidth="580.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <GridPane fx:id="boardPane" gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <GridPane fx:id="boardPane" styleClass="board" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -53,6 +53,33 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
+                           <children>
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                           </children>
                         </GridPane>
                      </children>
                   </AnchorPane>
