feat: continue implementation of board functionalities

--- a/src/main/resources/css/board.css
+++ b/src/main/resources/css/board.css
@@ -30,3 +30,8 @@
     -fx-border-color: #4D7A97;
     -fx-border-width: 5px;
 }
+
+.cell-container:pressed {
+    -fx-border-color: #F2A541;
+    -fx-border-width: 5px;
+}
