--- a/src/main/resources/fxml/InGame.fxml
+++ b/src/main/resources/fxml/InGame.fxml
@@ -54,27 +54,27 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" />
-                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" />
-                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" />
-                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" />
-                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="4" />
-                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" GridPane.rowIndex="0"/>
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="4" GridPane.rowIndex="0"/>
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="0" GridPane.rowIndex="4" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                               <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="cell-container" GridPane.columnIndex="3" GridPane.rowIndex="4" />
